--- a/ms/references.bib
+++ b/ms/references.bib
@@ -97,6 +97,21 @@
   year = {2016}
 }
 
+
+@article{Chesson-2018,
+  title = {Updates on Mechanisms of Maintenance of Species Diversity},
+  volume = {106},
+  number = {5},
+  journal = {Journal of Ecology},
+  doi = {10.1111/1365-2745.13035},
+  author = {Chesson, Peter},
+  editor = {Godoy, Oscar},
+  month = sep,
+  year = {2018},
+  pages = {1773-1794}
+}
+
+
 @article{Collatz-1991,
   title = {Physiological and Environmental Regulation of Stomatal Conductance, Photosynthesis and Transpiration: A Model That Includes a Laminar Boundary Layer},
   volume = {54},
@@ -273,6 +288,19 @@
 }
 
 
+
+@article{Falster-2018,
+  title = {How Functional Traits Influence Plant Growth and Shade Tolerance across the Life Cycle},
+  volume = {115},
+  issn = {0027-8424, 1091-6490},
+  language = {en},
+  number = {29},
+  journal = {Proceedings of the National Academy of Sciences},
+  doi = {10.1073/pnas.1714044115},
+  author = {Falster, Daniel S. and Duursma, Remko A. and FitzJohn, Richard G.},
+  year = {2018},
+  pages = {E6789-E6798}
+}
 
 
 
