--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -80,11 +80,12 @@ Documenting empirical patterns of variation of plant traits along
 climatic gradient represents a key first step to understand changes in
 vegetation composition, but we also need to propose mechanisms to
 explain these traits patterns. Several approach have been proposed to
-understand these mechanisms. First, there is along history of studies
-proposing adaptative arguments based on an optimisation approach with
-ecophysiological models of plant functioning \citep{Makela-2002}.
+understand these mechanisms.
 
-For instance, high $LMA$ has been proposed as an advantage in dry climate because
+
+First, there is along history of studies
+proposing adaptative arguments based on an optimisation approach with
+ecophysiological models of plant functioning \citep{Makela-2002}. For instance, high $LMA$ has been proposed as an advantage in dry climate because
 stiffer leaves can have a higher resistance to dehydration
 \citep{Wright-2002a,Wright-2002b} or the need to avoid overheating
 under condition of low transpiration \citep{Leigh-2012}. Higher
@@ -97,16 +98,13 @@ higher $N_{area}$ translate into higher $V_{cmax}$ this allow the
 plant to achieve a high $A_{area}$ even at the low stomatal conductance
 $g_s$ encountered in dry climate.
 
-These approaches represent a key first step, but
-they provide no explanations to the large range of trait variation observed
+Optimisation approaches provide no explanations to the large range of trait variation observed
 within each site. This is because they fail to account for the fact that
 these traits also controls species interaction and the coexistence of
 species with different traits values. 
-The model used to represents species coexistence are generally much more abstract \citep{Chesson-2018}. For instance, theoretical models have explored how abiotic constrains and competitive interactions drive changes in traits composition along theoretical abiotic gradients
-\citep{Case-2000,Goldberg-2006,Leimar-2008}. These
-studies have shown that competition can affect the range of traits
-value found in a given community and make the traits deviate from the
-theoretical climatic optimum.  Generally, these studies are based on abstract traits. These models are generally only weakly connected with the physiological processes, real traits, and abiotic gradients. They thus say little about how coexistence processes changes along real abiotic gradients. 
+However, theoretical models \citep{Case-2000,Goldberg-2006,Leimar-2008}
+studies have shown that abiotic constrains and competitive interactions jointly control species coexistence \citep{Chesson-2018} and the range of traits
+value found in a given community. Competition can clearly make the traits deviate from the climatic optimum.  Generally, theses theoretical models are only weakly connected with the physiological processes, real traits, and abiotic gradients. They thus say little about how coexistence processes changes along real abiotic gradients. 
 
 Recently a few studies have started to connect physiological approach
 and the theoretical approach to build trait-based models of full
@@ -144,10 +142,10 @@ plant to achieve a high $A_{area}$ even at low stomatal conductance
 $g_s$. Recently \citet{Prentice-2014} and \citet{Dong-2017} provided
 quantitative predictions for the effect of key climatic variable
 (including VPD) based on an optimised Farquhar photosynthesis
-model. Several authors have challenged the idea of summing the cost of
+model, showing how high leaf nitrogen could be selected in water stressed areas. Several authors have challenged the idea of summing the cost of
 water and carbon gain on the ground that competition should favour
 carbon gain optimisation only \citep{Wolf-2016} and the idea that the
-main effect of carbon stress come through cavitation and mortality \citep{Sperry-2016,Sperry-2017}. Our knowledge on these alternative mechanisms is however to lacunar to be explored in \plant\ for the moment.
+main effect of water stress come through cavitation and mortality \citep{Sperry-2016,Sperry-2017}. Our knowledge on these alternative mechanisms is however too lacunar to be explored in \plant\ for the moment.
 
 An additional effect of $N_{area}$ along aridity gradient is that higher $N_{area}$ could be related to a lower mechanical resistance of leaf resulting in a shift in the LMA \textit{vs.} leaf lifespan tradeoff to shorter lifespan \citep{Wright-2002a}. A key point that have been raised by \citet{Dong-2017} is that
 $N_{area}$ could be divided in structural and rubisco related N (using
@@ -157,45 +155,11 @@ the relationship of \citet{Onoda-2004}) but this distinction of N in to group is
 
 \section{Key questions}
 
-We will explore how the mixture of $LMA$ and $N_{area}$ predicted by \plant\ changes along aridity gradient exploring different assumptions about traits effect on community assembly. To do this we could either use the current version of \plant\ which do not explicitly represent water stress or modify the model to represent water stress via vapour pressure deficit 'vpd'.
-
-\subsection{Based on current version of plant}
-
-The assumption that we could test using the current version of \plant\ :
-
-\begin{itemize}
-
-\item First focusing only on $LMA$, the aridity gradient can simply affect
-the productivity with consequence on the process of light competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}). This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}.
-
-\item Secondly, the environmental gradient can affect the
-trade-off underpinning the light use strategy (by changing the
-trade-off between LMA and LLS). For instance, it has been reported
-that the coordination between $LLS$ and $LMA$ is changing along
-aridity gradient both in regional \citep{Wright-2002b} and global
-studies \citep{Wright-2004}. The elevation of the relation between
-$LMA$ and $LLS$ decreases with aridity (precipitation or other aridity index) resulting in a lower leaf life
-span for a given $LMA$. This could be due to a higher
-investment in leaf nitrogen per area $N_{area}$ at higher aridity
-\citep{Wright-2002b} that would results in a decrease leaf life span. Some studies have also reported potential
-effect on the slope of the relationship. We will thus explore how the
-change in the trade-off between $LMA$ and $LLS$ can influence shift in
-trait assembly predicted by \plant\ . The problem is that we don't know how to model the effect of aridity on Amax and the relative effect of the aridity index on the tradeoff and Amax is likely crucial.
-
-\item Finally, we could explore the role of $N_{area}$, which can have direct influence on the species tolerance to aridity as proposed by \citet{Wright-2003}. Briefly, $N_{area}$ is strongly related to the
-  abundance of photosynthetic apparatus in the leaf and allow the
-  plant to achieve higher photosynthesis for a given stomatal
-  conductance. Higher $N_{area}$ come however with the cost of a high
-  respiration rate. We will use \plant\ to predict assembly of these
-  two traits along an aridity gradients. We can use the empirical photosynthesis model with a theoretical effect of
-  water stress and $N_{area}$ on productivity as currently implement in \plant\. The effect of the index of productivity in plant on Amax is not based on any mechanisms on we don't know how this scale with $N_{area}$ effect. 
-\end{itemize}
-
+We will explore how the mixture of $LMA$ and $N_{area}$ predicted by \plant\ changes along aridity gradient exploring different assumptions about traits effect on community assembly. To do this we will build on the current version of \plant\ and include water stress effect through the most simple and well know effect, via a direct effect of vapour pressure deficit 'vpd' on leaf photosynthesis. Water stress is clearly more complex than just a change in vpd because it affects also soil water availability, but focusing on how the trait mixture of $LMA$ and $N_{area}$ change along an aridity gradient in function of 'vpd' and competition for light already allows to explore how trait assembly emerge from the interaction of biotic and abiotic effect.
 
 \subsection{Based on Farquhar photosynthesis version of plant}
 
-A key limitation of relying on the current version of \plant\ is that the effect of water stress and the role of $N_{area}$ are not predicted from first principle and we have to make strong assumption to represent their effect. AN other approach would be to modify the current photosynthesis model of \plant\ to use the
-  the classical Farqhuar model connected to $N_{area}$ and a stomatal
+In order to include a mechanistic representation of 'vpd' effect on photosynthesis and test how $N_{area}$ affect the response to drought and light competition a simple solution is to build on the classical Farqhuar model connected to $N_{area}$ and a stomatal
   conductance model responding along a vpd gradient. This approach
   is based on well know mechanisms implemented in most DGVMs but
   represent only water stress effect through vpd and ignore water stress through soil water availability.
@@ -204,148 +168,15 @@ Using this model we could test the following mechanisms.
 
 \begin{itemize}
 
-\item First we could replicate the analysis of variation of just LMA assembly but where photosynthesis is directly related to vpd stress.
+\item First we could analyse how LMA assembly vary along a vpd stress gradient (assuming constant temperature).
 
-\item Then we could include $LMA$ and $N_{area}$ as this last traits is know to influence photosynthesis response to vpd.
+\item Then we could analyse the joint assembly of $LMA$ and $N_{area}$ as this last traits is know to influence photosynthesis response to vpd.
 
-\item Finally, we could add the fact that $N_{area}$ influence the leaf lifespan on top of LMA but this need to be implemented.
+\item Finally, we could add the fact that $N_{area}$ influence the leaf lifespan on top of LMA.
 
 \end{itemize}
 
-
-
-\section{Overview of analysis and first results for the current version of plant}
-
-
-\subsection{$LMA$ only and productivity gradient}
-
-In a first set of assumption we consider a model where there is only one trait LMA. In the most simple version environmental gradients changes productivity (photosynthesis $A_{max}$ through a linear effect of a theoretical productivity gradient $p$) and
-thus competition for light and selection on LMA (this is already presented in \citet{Falster-2017}) (high LMA as adaptation to both low light and low productivity).
-
-The figure \ref{fig:lma} represents how the evolved community mixture
-of LMA change along a productivity gradient. This is essentially
-representing the results of \citet{Falster-2017} only over LMA
-(leaving out size at maturity). Low LMA strategies, coressponding to
-fast-growing light demanding species are only possible in productive sites.
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/gradient_lma_multi.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area along a productivity gradient controlled by aridity by 'Plant' \citep[see][]{Falster-2016}}
-\label{fig:lma}}
-\end{figure}
-
-\clearpage
-
-\subsection{$LMA$ only and changes in $LMA$ \textit{vs.} $LTR$}
-
-In second version, the aridity gradient affect the productivity ($A_{max}$) but also change the trade-off underpinning LMA-LLS in term of its elevation or its slope.
-
-\citet{Wright-2005} reported that the trade-off between LMA and Leaf Turnover Rate, LTR ($1/LLS$), is changing with aridity with higher aridity sites having higher LTR at a given LMA and a shallower slope. \footnote{There is also a shift in the link $A_{mass}$ and LMA (with higher in dry sites), probably because leaf N, but in a first step we will ignore that as the current version consider $A_{area}$ constant and the photosynthesis integrated over the year (as implemented in \plant\ ) is probably lower in dry sites. So we will keep the link between $a_{p1}$ and stress gradient as above. Note that \citet{Sakschewski-2015} implement a link between LMA and $v_{cmax_{area}}$.}
-
-This can be seen In Glopnet as (i) the elevation of the LTR \textit{vs.} LMA is changing with mean annual precipitation (MAP) (see Figure \ref{fig:MAP}) and (ii) the slope of the LTR \textit{vs.} LMA is changing with the ratio MAT/MAP (see Figure \ref{fig:MAT_MAP}). To implement these two distinct options in `plant` we first regressed the elevation and the slope of the site level LTR \textit{vs.} LMA relationship against MAP or MAT/MAP and then included this in `plant` (see Figure \ref{fig:elev_slope}). One key issue here is how to scale the theoretical aridity gradient we used in the previous model ($A{max}_{area}$ is a linear function with slope one of this gradient) with MAP or MAT/MAP. \footnote{So far I have just assumed that the range of MAP or MAT/MAP analyzed was restricted to the part of the theoretical gradient where growth was positive (above -0.3) and thus re-scaled the range of MAP or MAT/MAP to a variation of $p$ from -0.3 to 0.3. This is clearly not perfect.}
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/data_lma_ll_trade_off_climate_elev_P.pdf}
-\caption{\textbf{LTR vs LMA tradeoff per classes of MAP}
-\label{fig:MAP}}
-\end{figure}
-
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/data_lma_ll_trade_off_climate_elev_T_P.pdf}
-\caption{\textbf{LTR vs LMA tradeoff per classes of MAT/MAP}
-\label{fig:MAT_MAP}}
-\end{figure}
-
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/data_lma_ll_trade_off_climate_slope_elev.pdf}
-\caption{\textbf{Regression of site level elevation and slope parameters of the LTR \textit{vs.} LMA relationship (estimated with smatr::sma) against MAP or MAT/MAP. }
-\label{fig:elev_slope}}
-\end{figure}
-
-
-The figure \ref{fig:lma_map} represents how the evolved community
-mixture of LMA change along a productivity gradient when the elevation
-and slope (but mainly elevation) of LMA vs LTR were changing with
-precipitation MAP.
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/gradient_lma_multi_elev.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area
-    along a productivity gradient controlled by aridity by 'Plant'
-    with a variation of LTR \textit{vs.} LMA relationship with precipitation (mainly elevation).}
-\label{fig:lma_map}}
-\end{figure}
-
-The figure \ref{fig:lma_mat_o_map} represents how the evolved
-community mixture of LMA change along a productivity gradient when the
-elevation and slope of LMA vs LTR were changing with MAT/MAP. In both case the gradient of $LMA$ is steeper than
-with a constant $LMA$ \textit{vs.} $LTR$ relationship. With MAP (Figure \ref{fig:lma_map}) the $LMA$ is
-higher at low productivity and lower at high productivity than with a
-constant $LMA$ \textit{vs.} $LTR$ relationship. With MAT over MAP this
-is mainly lower value at high productivity.
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/gradient_lma_multi_slope.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area
-    along a productivity gradient controlled by aridity by 'Plant'
-    with a variation of LTR \textit{vs.} LMA relationship with MAT/MAP
-    (mainly slope).}
-\label{fig:lma_mat_o_map}}
-\end{figure}
-
-
-\clearpage
-
-\subsection{$LMA$ and $N_{area}$}
-
-A third set of models could explore how LMA interact with Leaf N, a second trait controlling the response to the environmental gradient. Aridity gradients affect productivity (photosynthesis) but a
-high leaf N allow to maintain a high photosynthesis even at low
-stomatal conductance (so in condition of high aridity). This is
-however coming with a higher respiration cost (potentially also a higher leaf turnover \citep{Wright-2002a,Wright-2002b}, but this is not modelled in plant). This may results in LMA shifting less than would have been otherwise, but instead differentiate species in N (with flow on effect to shade tolerance).
-
-
- \citet{Wright-2003} explore how N can substitute for water. Assuming that $A_{area} \propto N_{area} \, g_s$ (with $g_s$ stomatal conductance, and $N_{area}$ being related to $V_{cmax}$ and thus $c_a - c_i = c(1-\chi)$). One solution would be to assume that the water stress is represented by $1/g_s$ and $N_{area}$ could off-set the effect of water stress on $A_{area}$ (in our case $A_{max}$). The cost of leaf N comes from the higher dark leaf respiration per area for higher $N_{area}$ and is already include in \plant\ . \footnote{Prentice et al. 2014 expanded this prediction in term of an optimization with a details Farquhar model for C3 plant, but focusing directly on $V_{cmax}$ rather than $N_{area}$.}
-
- The current implementation of Leaf nitrogen per area in `plant` already captures some of the effect proposed by \citet{Wright-2003}. This is build on an empirical relationship between $A_{max}$ and $N_{area}$
-($A_{max} = b_{lf1} \times \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ \citep{Falster-2016}). There is however no quantitative prediction of how water stress influence $A_{max}$ for different level of $N_{area}$. A first option would be to simply consider that $A_{max}$ is linearly influenced by a water stress index  as follow $A_{max} = (1+WS) * b_{lf1} \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ ($WS$ is an aridity index ranging between -0.6 high aridity to 0.6 low aridity). This model is presented in the figure \ref{fig:leafN_water}. This could allow a first exploration of the implication of this assumption on community assembly.
-
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/WaterS_LeafN_contour.pdf}
-\caption{\textbf{Variation of $A{max}_{area}$ with leaf nitrogen per area and water availability (productivity gradient) predicted by `plant`.}
-\label{fig:leafN_water}}
-\end{figure}
-
-The figures \ref{fig:lma_narea1} and \ref{fig:lma_narea2} show that
-the gradient of $LMA$ is weaker than in the previous models but that a gradient of $N_{area}$ is predicted. There is also a negative correlation between $N_{area}$ and $LMA$ within sites.
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/gradient_narea_lma_multi_narea_lma2.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant'.}
-\label{fig:lma_narea1}}
-\end{figure}
-
-\begin{figure}[ht]
-\centering
-\includegraphics{../figures/gradient_narea_lma_multi_narea_lma.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant'. The size of the point represent the variation of LMA.}
-\label{fig:lma_narea2}}
-\end{figure}
-
-The figure \ref{fig:lma_narea2} shows that $LMA$ and $N_{area}$ are negatively correlated which is in contradiction with the weak but positive correlation reported between in empirical data \citep{Wright-2004}.
-
-
-\clearpage
+In the section below I presents the work I did to parametrise the Plant based on the Farqhuar model and some first results. At the end of the document are the work I did with the initial version of Plant that I propose to exclude from the paper because the effect of the water stress gradient on growth is not clear and not based on first principles.
 
 \section{Development of the Farquhar photosynthesis model with water stress and Leaf N effects}
 
@@ -731,19 +562,35 @@ The intercept of the LMA vs LT tradeoff is linearly related to $N_{area}$ as sho
 \label{fig:narea_intercept}}
 \end{figure}
 
-I have a first implementation that need to be tested.
 
-\pagebreak
+\clearpage
+
+\subsection{$LMA$ and $N_{area}$ along a vpd gradient}
+
+Here are some first results for low or perturbation rate.
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_narea_lma_multi_narea_lma_FvCB.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant' based on Farquhar with low disturbance rate. The size of the point represent the variation of LMA.}
+\label{fig:lma_nareaFl}}
+\end{figure}
+
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_narea_lma_single_narea_lma_FvCB.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant' based on Farquhar with lowhigh disturbance rate. The size of the point represent the variation of LMA.}
+\label{fig:lma_nareaFh}}
+\end{figure}
+
+\clearpage
 
 \subsection{TODO SHORT-TERM}
 
-In the long-term it would be interesting to think about:
+In the short-term it would be interesting to think about:
 
 \begin{itemize}
-
-\item  plot results simul cluster skipping error
-
-\item represents the effect of $N_{area}$ on leaf lifespan.
 
 \item re-run all simulation on cluster with vpd, for LMA only, LMA and $N_{area}$, and $N_{area}$ effect on leal lifespan.
 
@@ -908,6 +755,171 @@ In the long-term it would be interesting to think about:
 
 %% Check correspondance to Plant photsynthesis model which is based on Johnson, I. R. and Thornley, J. H. M. 1984. A model of instantaneous and daily canopy photosynthesis. - Journal of Theoretical Biology 107: 531–545.
 %%  and is a non-rectangular hyperbola response to light where we could assume that $A_{max}$ is related to $V_{cmax}$ and thus leaf N.
+
+\clearpage
+
+\subsection{Based on current version of plant}
+
+The assumption that we could test using the current version of \plant\ :
+
+\begin{itemize}
+
+\item First focusing only on $LMA$, the aridity gradient can simply affect
+the productivity with consequence on the process of light competition thus changing the evolved mixture of $LMA$ (as already shown by \citep{Falster-2017}). This would allow to explore the idea that high $LMA$ is favoured at high aridity because it lead to slow leaf turnover \citep{Wright-2002b}.
+
+\item Secondly, the environmental gradient can affect the
+trade-off underpinning the light use strategy (by changing the
+trade-off between LMA and LLS). For instance, it has been reported
+that the coordination between $LLS$ and $LMA$ is changing along
+aridity gradient both in regional \citep{Wright-2002b} and global
+studies \citep{Wright-2004}. The elevation of the relation between
+$LMA$ and $LLS$ decreases with aridity (precipitation or other aridity index) resulting in a lower leaf life
+span for a given $LMA$. This could be due to a higher
+investment in leaf nitrogen per area $N_{area}$ at higher aridity
+\citep{Wright-2002b} that would results in a decrease leaf life span. Some studies have also reported potential
+effect on the slope of the relationship. We will thus explore how the
+change in the trade-off between $LMA$ and $LLS$ can influence shift in
+trait assembly predicted by \plant\ . The problem is that we don't know how to model the effect of aridity on Amax and the relative effect of the aridity index on the tradeoff and Amax is likely crucial.
+
+\item Finally, we could explore the role of $N_{area}$, which can have direct influence on the species tolerance to aridity as proposed by \citet{Wright-2003}. Briefly, $N_{area}$ is strongly related to the
+  abundance of photosynthetic apparatus in the leaf and allow the
+  plant to achieve higher photosynthesis for a given stomatal
+  conductance. Higher $N_{area}$ come however with the cost of a high
+  respiration rate. We will use \plant\ to predict assembly of these
+  two traits along an aridity gradients. We can use the empirical photosynthesis model with a theoretical effect of
+  water stress and $N_{area}$ on productivity as currently implement in \plant\. The effect of the index of productivity in plant on Amax is not based on any mechanisms on we don't know how this scale with $N_{area}$ effect. 
+\end{itemize}
+
+\section{Overview of analysis and first results for the current version of plant}
+
+
+\subsection{$LMA$ only and productivity gradient}
+
+In a first set of assumption we consider a model where there is only one trait LMA. In the most simple version environmental gradients changes productivity (photosynthesis $A_{max}$ through a linear effect of a theoretical productivity gradient $p$) and
+thus competition for light and selection on LMA (this is already presented in \citet{Falster-2017}) (high LMA as adaptation to both low light and low productivity).
+
+The figure \ref{fig:lma} represents how the evolved community mixture
+of LMA change along a productivity gradient. This is essentially
+representing the results of \citet{Falster-2017} only over LMA
+(leaving out size at maturity). Low LMA strategies, coressponding to
+fast-growing light demanding species are only possible in productive sites.
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_lma_multi.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area along a productivity gradient controlled by aridity by 'Plant' \citep[see][]{Falster-2016}}
+\label{fig:lma}}
+\end{figure}
+
+\clearpage
+
+\subsection{$LMA$ only and changes in $LMA$ \textit{vs.} $LTR$}
+
+In second version, the aridity gradient affect the productivity ($A_{max}$) but also change the trade-off underpinning LMA-LLS in term of its elevation or its slope.
+
+\citet{Wright-2005} reported that the trade-off between LMA and Leaf Turnover Rate, LTR ($1/LLS$), is changing with aridity with higher aridity sites having higher LTR at a given LMA and a shallower slope. \footnote{There is also a shift in the link $A_{mass}$ and LMA (with higher in dry sites), probably because leaf N, but in a first step we will ignore that as the current version consider $A_{area}$ constant and the photosynthesis integrated over the year (as implemented in \plant\ ) is probably lower in dry sites. So we will keep the link between $a_{p1}$ and stress gradient as above. Note that \citet{Sakschewski-2015} implement a link between LMA and $v_{cmax_{area}}$.}
+
+This can be seen In Glopnet as (i) the elevation of the LTR \textit{vs.} LMA is changing with mean annual precipitation (MAP) (see Figure \ref{fig:MAP}) and (ii) the slope of the LTR \textit{vs.} LMA is changing with the ratio MAT/MAP (see Figure \ref{fig:MAT_MAP}). To implement these two distinct options in `plant` we first regressed the elevation and the slope of the site level LTR \textit{vs.} LMA relationship against MAP or MAT/MAP and then included this in `plant` (see Figure \ref{fig:elev_slope}). One key issue here is how to scale the theoretical aridity gradient we used in the previous model ($A{max}_{area}$ is a linear function with slope one of this gradient) with MAP or MAT/MAP. \footnote{So far I have just assumed that the range of MAP or MAT/MAP analyzed was restricted to the part of the theoretical gradient where growth was positive (above -0.3) and thus re-scaled the range of MAP or MAT/MAP to a variation of $p$ from -0.3 to 0.3. This is clearly not perfect.}
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/data_lma_ll_trade_off_climate_elev_P.pdf}
+\caption{\textbf{LTR vs LMA tradeoff per classes of MAP}
+\label{fig:MAP}}
+\end{figure}
+
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/data_lma_ll_trade_off_climate_elev_T_P.pdf}
+\caption{\textbf{LTR vs LMA tradeoff per classes of MAT/MAP}
+\label{fig:MAT_MAP}}
+\end{figure}
+
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/data_lma_ll_trade_off_climate_slope_elev.pdf}
+\caption{\textbf{Regression of site level elevation and slope parameters of the LTR \textit{vs.} LMA relationship (estimated with smatr::sma) against MAP or MAT/MAP. }
+\label{fig:elev_slope}}
+\end{figure}
+
+
+The figure \ref{fig:lma_map} represents how the evolved community
+mixture of LMA change along a productivity gradient when the elevation
+and slope (but mainly elevation) of LMA vs LTR were changing with
+precipitation MAP.
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_lma_multi_elev.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area
+    along a productivity gradient controlled by aridity by 'Plant'
+    with a variation of LTR \textit{vs.} LMA relationship with precipitation (mainly elevation).}
+\label{fig:lma_map}}
+\end{figure}
+
+The figure \ref{fig:lma_mat_o_map} represents how the evolved
+community mixture of LMA change along a productivity gradient when the
+elevation and slope of LMA vs LTR were changing with MAT/MAP. In both case the gradient of $LMA$ is steeper than
+with a constant $LMA$ \textit{vs.} $LTR$ relationship. With MAP (Figure \ref{fig:lma_map}) the $LMA$ is
+higher at low productivity and lower at high productivity than with a
+constant $LMA$ \textit{vs.} $LTR$ relationship. With MAT over MAP this
+is mainly lower value at high productivity.
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_lma_multi_slope.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area
+    along a productivity gradient controlled by aridity by 'Plant'
+    with a variation of LTR \textit{vs.} LMA relationship with MAT/MAP
+    (mainly slope).}
+\label{fig:lma_mat_o_map}}
+\end{figure}
+
+
+\clearpage
+
+\subsection{$LMA$ and $N_{area}$}
+
+A third set of models could explore how LMA interact with Leaf N, a second trait controlling the response to the environmental gradient. Aridity gradients affect productivity (photosynthesis) but a
+high leaf N allow to maintain a high photosynthesis even at low
+stomatal conductance (so in condition of high aridity). This is
+however coming with a higher respiration cost (potentially also a higher leaf turnover \citep{Wright-2002a,Wright-2002b}, but this is not modelled in plant). This may results in LMA shifting less than would have been otherwise, but instead differentiate species in N (with flow on effect to shade tolerance).
+
+
+ \citet{Wright-2003} explore how N can substitute for water. Assuming that $A_{area} \propto N_{area} \, g_s$ (with $g_s$ stomatal conductance, and $N_{area}$ being related to $V_{cmax}$ and thus $c_a - c_i = c(1-\chi)$). One solution would be to assume that the water stress is represented by $1/g_s$ and $N_{area}$ could off-set the effect of water stress on $A_{area}$ (in our case $A_{max}$). The cost of leaf N comes from the higher dark leaf respiration per area for higher $N_{area}$ and is already include in \plant\ . \footnote{Prentice et al. 2014 expanded this prediction in term of an optimization with a details Farquhar model for C3 plant, but focusing directly on $V_{cmax}$ rather than $N_{area}$.}
+
+ The current implementation of Leaf nitrogen per area in `plant` already captures some of the effect proposed by \citet{Wright-2003}. This is build on an empirical relationship between $A_{max}$ and $N_{area}$
+($A_{max} = b_{lf1} \times \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ \citep{Falster-2016}). There is however no quantitative prediction of how water stress influence $A_{max}$ for different level of $N_{area}$. A first option would be to simply consider that $A_{max}$ is linearly influenced by a water stress index  as follow $A_{max} = (1+WS) * b_{lf1} \frac{N_{area}}{N^0_{area}}^{b_{lf5}}$ ($WS$ is an aridity index ranging between -0.6 high aridity to 0.6 low aridity). This model is presented in the figure \ref{fig:leafN_water}. This could allow a first exploration of the implication of this assumption on community assembly.
+
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/WaterS_LeafN_contour.pdf}
+\caption{\textbf{Variation of $A{max}_{area}$ with leaf nitrogen per area and water availability (productivity gradient) predicted by `plant`.}
+\label{fig:leafN_water}}
+\end{figure}
+
+The figures \ref{fig:lma_narea1} and \ref{fig:lma_narea2} show that
+the gradient of $LMA$ is weaker than in the previous models but that a gradient of $N_{area}$ is predicted. There is also a negative correlation between $N_{area}$ and $LMA$ within sites.
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_narea_lma_multi_narea_lma2.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant'.}
+\label{fig:lma_narea1}}
+\end{figure}
+
+\begin{figure}[ht]
+\centering
+\includegraphics{../figures/gradient_narea_lma_multi_narea_lma.pdf}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant'. The size of the point represent the variation of LMA.}
+\label{fig:lma_narea2}}
+\end{figure}
+
+The figure \ref{fig:lma_narea2} shows that $LMA$ and $N_{area}$ are negatively correlated which is in contradiction with the weak but positive correlation reported between in empirical data \citep{Wright-2004}.
+
 
 \clearpage
 
