--- a/ms/Plant_WaterStress.tex
+++ b/ms/Plant_WaterStress.tex
@@ -572,7 +572,7 @@ Here are some first results for low or perturbation rate.
 \begin{figure}[ht]
 \centering
 \includegraphics{../figures/gradient_narea_lma_multi_narea_lma_FvCB.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant' based on Farquhar with low disturbance rate. The size of the point represent the variation of LMA.}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant' based on Farquhar with low disturbance rate (Disturbance mean interval 40). The size of the point represent the variation of LMA.}
 \label{fig:lma_nareaFl}}
 \end{figure}
 
@@ -580,7 +580,7 @@ Here are some first results for low or perturbation rate.
 \begin{figure}[ht]
 \centering
 \includegraphics{../figures/gradient_narea_lma_single_narea_lma_FvCB.pdf}
-\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant' based on Farquhar with lowhigh disturbance rate. The size of the point represent the variation of LMA.}
+\caption{\textbf{Predicted community assembly of leaf mass per area and leaf N per area along a productivity gradient controlled by aridity by 'Plant' based on Farquhar with high disturbance rate (Disturbance mean interval 5). The size of the point represent the variation of LMA.}
 \label{fig:lma_nareaFh}}
 \end{figure}
 
@@ -758,7 +758,10 @@ In the long-term it would be interesting to think about:
 
 \clearpage
 
-\subsection{Based on current version of plant}
+\section{Old materials based on current version of plant to recall previous work}
+
+
+List of hypo that I proposed to test with current version of plant in previous analysis. At the moment I'm not planning to keep that in the analysis because the effect of drought stress on growth is not based on first principle.
 
 The assumption that we could test using the current version of \plant\ :
 
